Fix Account-List spacing

--- a/src/GlobalStyle.scss
+++ b/src/GlobalStyle.scss
@@ -2,6 +2,7 @@
 
 :root {
     --primary: rgba(254, 44, 85, 1);
+    --text: rgba(22, 24, 35, 1);
 }
 
 * {
@@ -55,7 +56,7 @@ body {
 }
 
 .container {
-    max-width: 1150px;
+    max-width: 1145px;
     width: 100%;
     margin: 0 auto;
     padding: 0px 5px;
