--- a/src/components/Sidebar/AccountList/AccountList.module.scss
+++ b/src/components/Sidebar/AccountList/AccountList.module.scss
@@ -10,7 +10,7 @@
         ul {
             li {
                 a {
-                    padding: 3px 8px;
+                    padding: 5px 8px;
                     margin-left: -8px;
                     img {
                         width: 32px;
