--- a/src/components/Sidebar/NavMenu/NavMenu.module.scss
+++ b/src/components/Sidebar/NavMenu/NavMenu.module.scss
@@ -19,10 +19,12 @@
                             span {
                                 font-size: 18px;
                                 margin-right: 10px;
+                                color: var(--text);
                             }
                             h4 {
                                 font-size: 17px;
                                 font-weight: 800;
+                                color: var(--text);
                             }
                         }
                     }
